--- a/Urgencias-Cliente/src/app/crear-urgencias/crear-urgencias.component.html
+++ b/Urgencias-Cliente/src/app/crear-urgencias/crear-urgencias.component.html
@@ -9,37 +9,37 @@
     <form [formGroup]="myForm">
       <div class="form-group">
         <label>{{ "forms.isbn" | translate }}</label>
-        <input type="number" class="form-control" formControlName="identificacion" />
+        <input id="identificacion" type="number" class="form-control" formControlName="identificacion" />
         <span *ngIf="controlHasError('identificacion', 'required')">
           <strong>{{ "validation.required_field" | translate }}</strong>
         </span>
       </div>
       <div class="form-group">
         <label>{{ "forms.name" | translate }}</label>
-        <input type="text" class="form-control" formControlName="nombrePaciente" />
+        <input id="nombrePaciente" type="text" class="form-control" formControlName="nombrePaciente" />
         <span *ngIf="controlHasError('nombrePaciente', 'required')">
           <strong>{{ "validation.required_field" | translate }}</strong>
         </span>
       </div>
       <div class="form-group">
         <label>{{ "forms.inventory" | translate }}</label>
-        <input type="date" class="form-control" formControlName="fechaIngreso" />
+        <input id="fechaIngreso" type="date" class="form-control" formControlName="fechaIngreso" />
         <span *ngIf="controlHasError('fechaIngreso', 'required')">
           <strong>{{ "validation.required_field" | translate }}</strong>
         </span>
       </div>
       <div class="form-group">
         <label>{{ "forms.eps" | translate }}</label>
-        <input type="text" class="form-control" formControlName="eps" />
+        <input id="eps" type="text" class="form-control" formControlName="eps" />
         <span *ngIf="controlHasError('eps', 'required')">
           <strong>{{ "validation.required_field" | translate }}</strong>
         </span>
       </div>
-      <button class="btn btn-primary" (click)="store()">
+      <button id="botonCrearUrgencia" class="btn btn-primary" (click)="store()">
           {{ "forms.save" | translate }}
       </button>
       <p> </p>
-      <button class="btn btn-primary" (click)="confirmVolver()">
+      <button id="botonVolver" class="btn btn-primary" (click)="confirmVolver()">
         {{ "forms.return" | translate }}
     </button>
     </form>
