--- a/Urgencias-Cliente/src/app/urgencias/urgencias.component.html
+++ b/Urgencias-Cliente/src/app/urgencias/urgencias.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-10"><h1>{{"forms.available_books" | translate}}</h1></div>
       <div class="col-md-2">
-        <button class="btn btn-primary pull-right" routerLink="/Urgencias-form">
+        <button id="crearUrgencia" class="btn btn-primary pull-right" routerLink="/urgencia-form">
           {{"forms.new" | translate}}
         </button>
       </div>
@@ -32,7 +32,7 @@
         <td>{{ cambiar(urgencia.fechaHospitalizacion) }}</td>
         <td>{{ cambiar(urgencia.fechaCirugia) }}</td>
         <td>          
-          <button class="btn btn-danger" (click)="confirmDelete(urgencia.idPaciente)">{{"forms.delete" | translate}}</button>
+          <button id="botonEliminar" class="btn btn-danger" (click)="confirmDelete(urgencia.idPaciente)">{{"forms.delete" | translate}}</button>
         </td>
         <td>
           <button class="btn btn-success" (click)="confirmFacturar(urgencia.idPaciente)">{{"forms.facturar" | translate}}</button>
