Se actualizan pruebas y arquitectura de front

--- a/Urgencias-Cliente/src/app/feature/mostrar-factura/mostrar-factura.component.html
+++ b/Urgencias-Cliente/src/app/feature/mostrar-factura/mostrar-factura.component.html
@@ -42,7 +42,7 @@
       </div>
 
     </form>
-    <button class="btn btn-success" (click)="facturar(id)">
+    <button id="facturar" class="btn btn-success" (click)="facturar(id)">
       {{ "forms.facturar" | translate }}
   </button>
   <p> </p>
