Se realizan ajustes en los componentes

--- a/Urgencias-Cliente/src/app/feature/crear-urgencias/crear-urgencias.component.html
+++ b/Urgencias-Cliente/src/app/feature/crear-urgencias/crear-urgencias.component.html
@@ -1,9 +1,9 @@
 <div class="create-container">
   <h1 *ngIf="!editing">
-      {{ "forms.create_book" | translate }}
+      {{ "forms.create_urgencia" | translate }}
   </h1>
   <h1 *ngIf="editing">
-      {{ "forms.edit_book" | translate }}
+      {{ "forms.edit_urgencia" | translate }}
   </h1>
   <div class="form">
     <form [formGroup]="myForm">
