--- a/Urgencias-Cliente/src/app/feature/urgencias/urgencias.component.html
+++ b/Urgencias-Cliente/src/app/feature/urgencias/urgencias.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="page-header">
     <div class="row">
-      <div class="col-md-10"><h1>{{"forms.available_books" | translate}}</h1></div>
+      <div class="col-md-10"><h1>{{"forms.available_urgencias" | translate}}</h1></div>
       <div class="col-md-2">
         <button id="crearUrgencia" class="btn btn-primary pull-right" routerLink="/urgencia-form">
           {{"forms.new" | translate}}
